<resources>
    <string name="app_name">SingleMind</string>

    <!--Fragment Tags-->
    <string name="fragmentHome">fragHome</string>
    <string name="fragmentEvents">fragEvents</string>
    <string name="fragmentImport">fragImport</string>

    <!-- Login Activity-->
    <string name="login_activity_facebook">Sign in with Facebook</string>
    <string name="Login_activity_google">Sign in with Google</string>
    <string name="login_activity_email">Sign in with email</string>
    <string name="login_activity_anon">Sign in anonymously</string>
    <string name="login_activity_create_account">Create a new account</string>
    <string name="facebook_app_id">1210018895841559</string>
    <string name="fb_login_protocol_scheme">fb1210018895841559</string>
    <string name="google_app_client_id">1051419676916-06dld16mcorrbfco0gd31svn6p578jjd.apps.googleusercontent.com</string>

    <!-- Login Activity2-->
    <string name="login_activity2_error">Error</string>
    <string name="login_activity2_email_hint">email</string>
    <string name="login_activity2_password_hint">password</string>
    <string name="login_activity2_submit">Submit</string>
    <string name="login_activity2_password_reset">Forgot Password?</string>

    <!-- Registration Activity -->
    <string name="reg_activity_title">Register Account</string>
    <string name="reg_activity_name_hint">name</string>
    <string name="reg_activity_email_hint">email</string>
    <string name="reg_activity_password_hint">password</string>
    <string name="reg_activity_password_hint2">repeat password</string>
    <string name="reg_activity_submit">Submit</string>

    <!--Main Activity-->
    <string name="main_activity_home">Home</string>
    <string name="main_activity_dashboard">Dashboard</string>
    <string name="sub_share_menu">Share</string>

    <!--Drawer Activity-->
    <string name="drawer_home">Home</string>
    <string name="drawer_import">Import</string>
    <string name="drawer_privacy">Privacy</string>
    <string name="drawer_contact">Contact the developers</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_rate">Rate app</string>
    <string name="sign_out">Sign Out</string>


    <!--AddEventFragment-->
    <string name="add_event_title">Add Event</string>
    <string name="add_event_name">Event title</string>
    <string name="add_event_date">Event date</string>
    <string name="add_event_time">Event time</string>
    <string name="add_event_description">Enter description</string>
    <string name="add_event_submit">Submit</string>
    <string name="add_event_type">Event type</string>
    <string name="add_event_type_prompt">Select</string>
    <string-array name="add_event_spinner_entries">
        <item>Homework</item>
        <item>Appointment</item>
        <item>Gathering</item>
        <item>Party</item>
        <item>Birthday</item>
        <item>Other</item>
    </string-array>

    <!--DatePickerFragment-->
    <string name="event_date_picker_title">Set event day</string>
    <string name="event_error_on_storage">Network error, please try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
