<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_white_1000">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_add_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:text="Add Event" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:singleLine="true"
                        android:textSize="16sp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_event_name"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_event_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_event_date" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/date_picker_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Set Event Date"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/pickStartTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_event_time" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/time_picker_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Set start time"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_event_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_event_description"
                            android:inputType="textMultiLine"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_submit_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:onClick="addEvent"
                        android:text="@string/add_event_submit" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

